--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -12,7 +12,7 @@ $purple:            #493252;
 $red:               #E25440;
 $slate:             #3D4260;
 
-$primary-color:     $red;
+$primary-color:     $slate;
 $secondary-color:   #5BA4E5;
 
 $link-color:        $primary-color;
